# rust-datadog-otel

./: Cargo.toml  Dockerfile  Makefile  README.md  deployment.yaml
src/: main.rs
